
    - Added the counterpart constraints "minPauseLength" and "maxPauseLength" to the SimpleArrangementEngine, which constrain
      the minimum and maximum pause lengths, respectively, between activity segments (counted in chord sections).  The
      constraints will be ignored for an activity vector if the activity vector is never active or only has one activity
      segment.

    - Added "skipWhenApplied" and "skipWhenNotApplied" tags to conditional patterns in the DrumSequenceEngine. With these two
      tags you can define the number of conditional patterns to skip if the current pattern was applied or was not applied
      (even though it was allowed to be applied), respectively. You can skip backwards by using a negative number (-1 would
      repeat the current conditional pattern, -2 would jump to the previous one, etc.; make sure that you don't create
      infinite loops). Both values default to zero, which means that processing continues with the next pattern.

    - Fixed bug that prevented correct random seeding when a song name was used on the command-line.


0.1: 2011-05-22

    - Added a better random seed augmentation scheme. Now random seeds from a component are passed on to subcomponents by
      augmenting the value with a hash value of the implementation class of the subcomponent and the position of the subcomponent
      within the parent component. This makes sure that each subcomponent receives a different random seed with very high
      probability.

    - The DrumSequenceEngine now supports using pitch offsets relative to the base pitch. For example, if the base pitch is
      36, using "0" in the pattern uses pitch 36, "1" uses pitch 37, etc. This is suitable for example for loop players, where
      different pitches for different loop fragments are used.

    - Removed the RhythmSequenceEngine, because it was not configurable and not really usable. Use the DrumSequenceEngine instead.
